Implement publish app

--- a/app/publish/templates/publish/index.html
+++ b/app/publish/templates/publish/index.html
@@ -1,8 +1,21 @@
-<html>
-  <head>
-    <title>Publish Index Page</title>
-  </head>
-  <body>
-    <h1>Hello publish page.</h1>
-  </body>
-</html>
+{% extends "publish/base.html" %}
+
+{% block head %}
+  <title>Publish home page</title>
+{% endblock %}
+
+{% block body %}
+  <h1>Publish home page</h1>
+    <div class="form-wrapper">
+      <form action="{% url 'index' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+    <ul>
+      {% for post in posts %}
+        <li><a href="{% url 'view-post' post_id=post.id %}">{{ post.title }} ({{ post.author_name }})</a></li>
+      {% endfor %}
+    </ul>
+{% endblock %}
