Updated color from rgb to hex

--- a/app/publish/static/publish/style.css
+++ b/app/publish/static/publish/style.css
@@ -35,7 +35,7 @@ label {
 
 input[type=submit] {
   width: 100%;
-  background-color: rgb(0, 136, 255);
+  background-color: #0088FF;
   color: #fff;
   padding: 15px 20px;
   border: none;
